# HPC-homeworks

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
assets/: automata_history.csv  ping_pong.csv  speedup.csv
docs/: problem_description.md
scripts/: benchmark_automata.sh  plot_automata.py  plot_automata_speedup.py
tasks/: Automata.cc  BugParFor.c  BugReduction.c  CMakeLists.txt  Car.cc  LeastSquares.cc  LinearSolver.cc  Pi.cc  PingPong.cc  PingPong2.cc  Test.cc
